[package]
name = "tokio-eventfd"
version = "0.1.0"
authors = ["Alexander Polakov <plhk@sdf.org>"]
edition = "2018"
description = "Linux eventfd for tokio"
documentation = "https://docs.rs/tokio-eventfd"
repository = "https://github.com/polachok/tokio-eventfd"
license = "MIT"

[dependencies]
tokio-reactor = "0.1"
tokio-io = "0.1"
mio = "0.6"
futures = "0.1"
libc = "0.2"

[dev-dependencies]
tokio = "0.1"
bytes = "0.4"
