[package]
name = "tokio-eventfd"
version = "0.2.2"
authors = ["Alexander Polakov <plhk@sdf.org>"]
edition = "2018"
description = "Linux eventfd for tokio"
documentation = "https://docs.rs/tokio-eventfd"
repository = "https://github.com/polachok/tokio-eventfd"
license = "MIT"

[dependencies]
tokio = { version = "1.10.0", features = [] }
libc = "0.2"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["net", "rt", "test-util", "macros", "io-util", "time" ] }
